--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,11 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: 'recursive'
+    - name: Install Arduino core for ESP32
+      run: |
+          mkdir -p esp32/components
+          cd esp32/components
+          git clone https://github.com/espressif/arduino-esp32.git arduino
     - name: esp-idf build
       uses: espressif/esp-idf-ci-action@v1
       with:
