--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,14 +17,23 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: 'recursive'
+    
     - name: Install Arduino core for ESP32
       run: |
-          mkdir -p esp32/components
-          cd esp32/components
-          git clone https://github.com/espressif/arduino-esp32.git arduino
-    - name: esp-idf build
+        mkdir -p esp32/components
+        cd esp32/components
+        git clone https://github.com/espressif/arduino-esp32.git arduino
+
+    - name: Set up ESP-IDF
       uses: espressif/esp-idf-ci-action@v1
       with:
         esp_idf_version: v5.0
         target: esp32s2
         path: 'esp32'
+
+    - name: Update idf-component-manager
+      run: |
+        /opt/esp/python_env/idf5.0_py3.8_env/bin/python -m pip install --upgrade idf-component-manager
+
+    - name: esp-idf build
+      run: idf.py build
