--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: 'recursive'
-    
+
     - name: Install Arduino core for ESP32
       run: |
         mkdir -p esp32/components
@@ -25,15 +25,18 @@ jobs:
         git clone https://github.com/espressif/arduino-esp32.git arduino
 
     - name: Set up ESP-IDF
-      uses: espressif/esp-idf-ci-action@v1
-      with:
-        esp_idf_version: v5.0
-        target: esp32s2
-        path: 'esp32'
+      run: |
+        # Download and set up ESP-IDF v5.0
+        git clone -b v5.0 --recursive https://github.com/espressif/esp-idf.git /opt/esp/idf
+        python3 -m pip install -r /opt/esp/idf/requirements.txt
 
     - name: Update idf-component-manager
       run: |
-        /opt/esp/python_env/idf5.0_py3.8_env/bin/python -m pip install --upgrade idf-component-manager
+        /opt/esp/idf/install.sh
+        source /opt/esp/idf/export.sh
+        python3 -m pip install --upgrade idf-component-manager
 
     - name: esp-idf build
-      run: idf.py build
+      run: |
+        source /opt/esp/idf/export.sh
+        idf.py -C esp32 build
