--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,59 +9,78 @@ on:
       - main
 
 jobs:
-  build:
+  build_esp32_v5_1:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        target: ["esp32s2"]
+      fail-fast: false
     steps:
     - name: Checkout repo
       uses: actions/checkout@v4
       with:
+        ref: ${{ github.ref }}
         submodules: 'recursive'
-
-    - name: Cache ESP-IDF installation
-      id: esp-idf-cache
-      uses: actions/cache@v3
+    - name: ESP-IDF v5.1 build
+      uses: ./.github/actions/esp-idf-with-node
       with:
-        path: /opt/esp/idf
-        key: esp-idf-v5.1
-        restore-keys: |
-          esp-idf-
+        target: "${{ matrix.target }}"
+        command: "idf.py set-target ${{matrix.target}} build"
 
-    - name: Set up ESP-IDF
-      if: steps.esp-idf-cache.outputs.cache-hit != 'true'
-      run: |
-        # Download and set up ESP-IDF v5.1 only if not cached
-        git clone -b v5.1 --recursive https://github.com/espressif/esp-idf.git /opt/esp/idf
-        /opt/esp/idf/install.sh
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    - name: Cache Python packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: python-packages-${{ runner.os }}-${{ hashFiles('/opt/esp/idf/requirements.txt') }}
-        restore-keys: |
-          python-packages-${{ runner.os }}-
+#     steps:
+#     - name: Checkout repo
+#       uses: actions/checkout@v4
+#       with:
+#         submodules: 'recursive'
 
-    - name: Update idf-component-manager
-      run: |
-        source /opt/esp/idf/export.sh
-        python3 -m pip install --upgrade idf-component-manager
+#     - name: Cache ESP-IDF installation
+#       id: esp-idf-cache
+#       uses: actions/cache@v3
+#       with:
+#         path: /opt/esp/idf
+#         key: esp-idf-v5.1
+#         restore-keys: |
+#           esp-idf-
 
-    - name: Install Arduino core for ESP32
-      run: |
-        mkdir -p esp32/components
-        cd esp32/components
-        git clone https://github.com/espressif/arduino-esp32.git arduino
+#     - name: Set up ESP-IDF
+#       if: steps.esp-idf-cache.outputs.cache-hit != 'true'
+#       run: |
+#         # Download and set up ESP-IDF v5.1 only if not cached
+#         git clone -b v5.1 --recursive https://github.com/espressif/esp-idf.git /opt/esp/idf
+#         /opt/esp/idf/install.sh
 
-    - name: Cache build output
-      uses: actions/cache@v3
-      with:
-        path: esp32/build
-        key: build-${{ github.sha }}
-        restore-keys: |
-          build-
+#     - name: Cache Python packages
+#       uses: actions/cache@v3
+#       with:
+#         path: ~/.cache/pip
+#         key: python-packages-${{ runner.os }}-${{ hashFiles('/opt/esp/idf/requirements.txt') }}
+#         restore-keys: |
+#           python-packages-${{ runner.os }}-
 
-    - name: esp-idf build
-      run: |
-        source /opt/esp/idf/export.sh
-        idf.py -C esp32 build
+#     - name: Update idf-component-manager
+#       run: |
+#         source /opt/esp/idf/export.sh
+#         python3 -m pip install --upgrade idf-component-manager
+
+#     - name: Install Arduino core for ESP32
+#       run: |
+#         mkdir -p esp32/components
+#         cd esp32/components
+#         git clone https://github.com/espressif/arduino-esp32.git arduino
+
+#     - name: Cache build output
+#       uses: actions/cache@v3
+#       with:
+#         path: esp32/build
+#         key: build-${{ github.sha }}
+#         restore-keys: |
+#           build-
+
+#     - name: esp-idf build
+#       run: |
+#         source /opt/esp/idf/export.sh
+#         idf.py -C esp32 build
