--- a/esp32/main/CMakeLists.txt
+++ b/esp32/main/CMakeLists.txt
@@ -1,1 +1,1 @@
-idf_component_register(SRCS "main.cpp" INCLUDE_DIRS "." REQUIRES "esp_wifi" "esp_http_server")
+idf_component_register(SRCS "main.cpp" INCLUDE_DIRS "." REQUIRES "esp_wifi" "esp_ota_ops" "esp_log" "esp_system" "esp_http_server")
